--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "nodemon ./index.js localhost 3000 "
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Alan Barcelos",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
